manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filament-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filament-app
  template:
    metadata:
      labels:
        app: filament-app
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: filament-app
          image: mzdevocotal/filament-app:v6
          ports:
            - containerPort: 80
          volumeMounts:
            - name: sqlite-storage
              mountPath: /var/www/html/storage/app/db
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: filament-sqlite-pvc
