manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filament-service
spec:
  type: NodePort
  selector:
    app: filament-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
